--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="images/indplan.png" class="-img-top" alt="Individual Plan">
                         <div class="card-body">
                             <h5 class="card-title">Individual</h5>
-                            <p>The perfect plan for just you. Get all he fresh fruits and vegetables you need without the waste.</p>
+                            <p>The perfect plan for just you. Get all the fresh fruits and vegetables you need without the waste.</p>
                             <a href="#" class="btn btn-success">Buy</a>
                         </div>
                         <div class="card-footer">
@@ -73,7 +73,7 @@
                         <img src="images/armyplan.png" class="-img-top" alt="Army Plan">
                         <div class="card-body">
                             <h5 class="card-title">Army Plan</h5>
-                            <p>You hvae a really big family or whole army you need to feed? This is the plan for you!</p>
+                            <p>You have a really big family or whole army you need to feed? This is the plan for you!</p>
                             <a href="#" class="btn btn-success">Buy</a>
                         </div>
                         <div class="card-footer">
